<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUser"


    >

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#154c79"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/name_detail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_detail"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@android:color/darker_gray"
            android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/tv_username_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_detail"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                />
            <TextView

                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/location_detail"
                android:layout_gravity="center"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/company_detail"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAlignment="inherit"
                app:drawableStartCompat="@drawable/ic_baseline_work_24" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="120dp"
        app:cardElevation="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followings"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                    <TextView
                        android:id="@+id/tv_followings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/followings_detail"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/followers_detail"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                    <TextView
                        android:id="@+id/tv_repository"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/repository_detail"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_marginTop="410dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kotlin_dasar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kotlin"
                app:drawableStartCompat="@drawable/ic_baseline_brightness_1_24"
                android:layout_marginTop="30dp"
                android:textSize="16sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="200dp"
        android:layout_height="110dp"
        app:cardCornerRadius="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="410dp"
        app:cardElevation="8dp"
        android:layout_toEndOf="@+id/card2"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_project_webiste"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/css"
                app:drawableStartCompat="@drawable/css"
                android:layout_marginTop="30dp"
                android:textSize="16sp"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_below="@id/card2"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tugas_ostric_1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/javascript"
                app:drawableStartCompat="@drawable/java_script"
                android:layout_marginTop="30dp"
                android:textSize="16sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="110dp"
        app:cardCornerRadius="25dp"
        android:layout_marginStart="10dp"
        android:layout_below="@id/card3"
        app:cardElevation="8dp"
        android:layout_toEndOf="@+id/card4"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_home_web"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/html"
                app:drawableStartCompat="@drawable/html"
                android:layout_marginTop="30dp"
                android:textSize="16sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>